tests/snapshots/run_wpt_conformance__trtx_global_averagePool2d_float16_4D_tensor_all_positive_options_windowDimensions.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "averagePool2d.https.any.js",
    "global averagePool2d float16 4D tensor all positive options.windowDimensions",
    "trtx",
    "PASS",
)
