tests/snapshots/run_wpt_conformance__trtx_greaterOrEqual_float16_3D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "greater_or_equal.https.any.js",
    "greaterOrEqual float16 3D tensors",
    "trtx",
    Failed {
        msg: Some(
            "greater_or_equal :: greaterOrEqual float16 3D tensors: index 5: actual=0 expected=1 tolerance=0\n  inputs: inputB: [-7.02734375, 1.9111328125, 3.576171875, 1.716796875, 2.845703125, -2.3125, -6.0859375, -3.4375, -3.4765625, -2.1953125, 2.99609375, -5.5390625, 5.09765625, 6.77734375, 2.451171875, 5.2109375, -9.7109375, -2.412109375, 8.6796875, -9.453125, 0.77001953125, -1.5185546875, -9.15625, -4.9921875]; inputA: [-8.046875, -5.5234375, -2.09765625, -7.45703125, -5.44921875, 9.8046875, -3.60546875, 4.08984375, -5.06640625, 1.58203125, 5.67578125, -4.33984375, 1.6943359375, 2.92578125, -7, -2.52734375, 1.443359375, 7.86328125, 5.78125, 1.87109375, -0.5234375, 0.434326171875, 8.9375, 1.6572265625]\n  expected output: [0, 0, 0, 0, 0, 1, 1, 1, 0, 1 ...] (len=24)\n  actual output: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=24)\n  expected output full nd:\n[0, 0, 0, 0, 0, 1, 1, 1, 0, 1, ...] (len=24, shape=[2, 3, 4])\n  actual output full nd:\n[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[2, 3, 4])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f16[2, 3, 4];\n    inputB: f16[2, 3, 4];\n  }\n\n  nodes {\n    [output] = greaterOrEqual(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
